--- a/Contract/APPLUSD/package.json
+++ b/Contract/APPLUSD/package.json
@@ -6,14 +6,23 @@
   "scripts": {
     "test": "hardhat test",
     "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.js --network localhost",
-    "deploy:hardhat": "hardhat run scripts/deploy.js --network hardhat",
-    "interact": "hardhat run scripts/interact.js --network localhost",
-    "interact:hardhat": "hardhat run scripts/interact.js --network hardhat",
-    "node": "hardhat node",
-    "clean": "hardhat clean"
+    "deploy:bsc-testnet": "hardhat run scripts/deploy-bsc.js --network bscTestnet",
+    "deploy:bsc-mainnet": "hardhat run scripts/deploy-bsc.js --network bscMainnet",
+    "upgrade:bsc-testnet": "hardhat run scripts/upgrade-applusd.js --network bscTestnet",
+    "upgrade:bsc-mainnet": "hardhat run scripts/upgrade-applusd.js --network bscMainnet",
+    "test-decimals:bsc-testnet": "hardhat run scripts/test-decimals-zero.js --network bscTestnet",
+    "clean": "hardhat clean",
+    "verify:bsc-testnet": "hardhat verify --network bscTestnet",
+    "verify:bsc-mainnet": "hardhat verify --network bscMainnet"
   },
-  "keywords": ["blockchain", "defi", "smart-contracts", "hardhat", "ethereum", "upgradeable"],
+  "keywords": [
+    "blockchain",
+    "defi",
+    "smart-contracts",
+    "hardhat",
+    "ethereum",
+    "upgradeable"
+  ],
   "author": "",
   "license": "MIT",
   "type": "commonjs",
@@ -23,7 +32,10 @@
     "hardhat": "^2.26.1"
   },
   "dependencies": {
+    "@chainlink/contracts": "^1.4.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@openzeppelin/contracts": "^5.2.0",
-    "@openzeppelin/contracts-upgradeable": "^5.2.0"
+    "@openzeppelin/contracts-upgradeable": "^5.2.0",
+    "dotenv": "^17.2.1"
   }
 }
